--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.5.0",
     "gridsome": "^0.7.0",
+    "http-proxy-middleware": "^2.0.1",
     "markdown-it": "^12.2.0"
   }
 }
